# de-uplc

./: .gitignore  .vscodeignore  BUILD_AND_RELEASE.md  LICENSE  QUESTION_SHORT.md  README.md  TEST_REPORT.md  UPLC_AND_CEK.md  build-extension.sh  close-out-doc.md  de-uplc-components.md  debugger-engine-api.md  language-configuration.json  launch.json  navigation-flow.md  package-lock.json  package.json  release-extension.sh  techinal-review.md  test-file-provider.json  test-tx.json  tets.tx  tsconfig.json  webpack.config.js
rust-src/: .gitignore  Cargo.toml  build-quick.sh  build-wasm.sh  encode-wasm-to-base64.js
rust-src/.cargo/: config.toml
rust-src/schemas/: SerializableBudget.json  SerializableContext.json  SerializableEnvLazy.json  SerializableExecutionStatus.json  SerializableMachineContext.json  SerializableMachineContextLazy.json  SerializableMachineState.json  SerializableMachineStateLazy.json  SerializableScriptContext.json  SerializableTerm.json  SerializableValue.json  SerializableValueLazy.json  StepResult.json  combined_schema.json
rust-src/src/: budget.rs  context.rs  lazy_loading.rs  lib.rs  machine_state.rs  plutus_data.rs  protocol_params.rs  serializer.rs  tests.rs  tx_utils.rs  utxo.rs  value.rs  wasm_tools.rs
rust-src/src/debugger_engine/: debugger_engine.rs  lazy_session_api.rs  mod.rs  session_controller.rs
rust-src/src/script_context/: basic_types.rs  certificates.rs  governance.rs  mod.rs  script_types.rs  tx_info.rs  utils.rs
scripts/: generate-types.js
src/: common.ts  extension.ts
syntaxes/: plutus-types.tmLanguage.json  (+1 more)
(+35 files in other folders)
